[gd_scene load_steps=26 format=3 uid="uid://ttle2gx3ns1h"]

[ext_resource type="Theme" uid="uid://do0lbre163efj" path="res://assets/data/ui_theme.tres" id="1_crnce"]
[ext_resource type="Texture2D" uid="uid://cmh8dch3fefrd" path="res://assets/images/UI/Dust_ui/dust_icon.png" id="2_x0n6o"]
[ext_resource type="Texture2D" uid="uid://cuy81m5ei4bxs" path="res://assets/images/UI/Dust_ui/dust_fill.png" id="3_aq72h"]
[ext_resource type="Script" uid="uid://bpsvkjcb822ad" path="res://code/ui/progress_bar_dust.gd" id="4_oqj4c"]
[ext_resource type="Texture2D" uid="uid://xca7eq8p5omv" path="res://assets/images/UI/Dust_ui/dust_overlay.png" id="5_pbku6"]
[ext_resource type="Script" uid="uid://bxotqlnrj5vex" path="res://code/ui/label_dust.gd" id="6_i3ans"]
[ext_resource type="Texture2D" uid="uid://cxp1pyg8y4ej2" path="res://assets/images/UI/Battery_ui/battery_1_v2.png" id="7_x0n6o"]
[ext_resource type="Texture2D" uid="uid://d3ikk2kllsoh3" path="res://assets/images/UI/Battery_ui/battery_2_vert.png" id="8_crnce"]
[ext_resource type="Script" uid="uid://cgdaov6841ifx" path="res://code/ui/progress_bar_battery.gd" id="9_aq72h"]
[ext_resource type="Script" uid="uid://c5gde2jetgtt0" path="res://code/ui/popup_respawn.gd" id="9_cyqav"]
[ext_resource type="Script" uid="uid://cvqyrpvp84up1" path="res://code/ui/popup_docking_station.gd" id="10_baxkn"]
[ext_resource type="Script" uid="uid://bl78r2iibvsco" path="res://code/ui/label_battery.gd" id="10_oqj4c"]
[ext_resource type="Script" uid="uid://dgtsfdncydm43" path="res://code/button_highlight.gd" id="11_20oq5"]
[ext_resource type="Script" uid="uid://bytb6rn3npm0o" path="res://code/ui/popup_shop.gd" id="12_plh64"]
[ext_resource type="PackedScene" uid="uid://cvnlxf8mywvy4" path="res://scenes/ui/upgrade_ui.tscn" id="13_t1jn2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sugp2"]

[sub_resource type="GDScript" id="GDScript_tefeu"]
script/source = "extends Label

func _process(_delta: float) -> void:
	text = \"FPS \" + str(Engine.get_frames_per_second())
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wyq8"]
content_margin_left = 48.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.06879827, 0.06879828, 0.06879828, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp3eg"]
content_margin_left = 24.0
content_margin_top = 16.0
content_margin_right = 24.0
content_margin_bottom = 16.0
bg_color = Color(0.26657522, 0.2665752, 0.2665752, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb6dy"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trceg"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.15686275, 0.8901961, 0.16470589, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbj1t"]
bg_color = Color(0.20784314, 0.14117648, 0.1764706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkv2x"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 24.0
bg_color = Color(0.26657522, 0.2665752, 0.2665752, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_muem4"]
bg_color = Color(0.6, 0.6, 0.6, 0.1764706)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ld40"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.6393685, 0.13711494, 0.13653016, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="GameUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_crnce")
theme_override_styles/panel = SubResource("StyleBoxEmpty_sugp2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="FPS" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "FPS: 2"
script = SubResource("GDScript_tefeu")

[node name="Version" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "v0.1.4"
horizontal_alignment = 2

[node name="VBoxDust" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxDust"]
layout_mode = 2
theme_override_constants/margin_left = -5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxDust/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_x0n6o")
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxDust"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_2wyq8")

[node name="Control" type="Control" parent="MarginContainer/VBoxDust/PanelContainer"]
custom_minimum_size = Vector2(20, 413.61)
layout_mode = 2

[node name="ProgressBarDust" type="TextureProgressBar" parent="MarginContainer/VBoxDust/PanelContainer/Control"]
layout_mode = 0
offset_left = -42.0
offset_top = 6.0
offset_right = 14.0
offset_bottom = 409.0
min_value = 100.0
value = 100.0
fill_mode = 3
stretch_margin_left = 155
stretch_margin_top = 545
stretch_margin_right = 200
stretch_margin_bottom = 615
texture_progress = ExtResource("3_aq72h")
script = ExtResource("4_oqj4c")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxDust/PanelContainer/Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = -3.6950073
offset_right = 74.0
offset_bottom = 3.6950073
grow_vertical = 2
theme_override_constants/margin_left = -45
theme_override_constants/margin_top = -15
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = -30

[node name="Overlay Ticks" type="TextureRect" parent="MarginContainer/VBoxDust/PanelContainer/Control/MarginContainer2"]
layout_mode = 2
texture = ExtResource("5_pbku6")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxDust"]
layout_mode = 2
theme_override_constants/margin_left = -14

[node name="LabelDust" type="Label" parent="MarginContainer/VBoxDust/MarginContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 6
text = "1000 / 1000"
horizontal_alignment = 1
script = ExtResource("6_i3ans")

[node name="VBoxBattery" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxBattery"]
layout_mode = 2
theme_override_constants/margin_left = -5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxBattery/MarginContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_x0n6o")
expand_mode = 1
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxBattery"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_2wyq8")

[node name="Control" type="Control" parent="MarginContainer/VBoxBattery/PanelContainer"]
custom_minimum_size = Vector2(20, 413.61)
layout_mode = 2

[node name="ProgressBarBattery" type="TextureProgressBar" parent="MarginContainer/VBoxBattery/PanelContainer/Control"]
layout_mode = 0
offset_left = -42.0
offset_top = 6.0
offset_right = 14.0
offset_bottom = 409.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("8_crnce")
script = ExtResource("9_aq72h")

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxBattery/PanelContainer/Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = -3.6950073
offset_right = 74.0
offset_bottom = 3.6950073
grow_vertical = 2
theme_override_constants/margin_left = -45
theme_override_constants/margin_top = -15
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = -30

[node name="Overlay Ticks" type="TextureRect" parent="MarginContainer/VBoxBattery/PanelContainer/Control/MarginContainer3"]
layout_mode = 2
texture = ExtResource("5_pbku6")
expand_mode = 1
stretch_mode = 6
flip_h = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxBattery"]
layout_mode = 2
theme_override_constants/margin_left = -14

[node name="LabelBattery" type="Label" parent="MarginContainer/VBoxBattery/MarginContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 6
text = "1000 / 1000"
horizontal_alignment = 1
script = ExtResource("10_oqj4c")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PopupRespawn" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_dp3eg")
script = ExtResource("9_cyqav")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupRespawn"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LabelRespawnMessage" type="Label" parent="PopupRespawn/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Battery dead.
Lose half of your dust and respawn?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupRespawn/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ButtonYes" type="Button" parent="PopupRespawn/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Okay."

[node name="ButtonNo" type="Button" parent="PopupRespawn/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Yeah, I guess..."

[node name="PopupDockingStation" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_dp3eg")
script = ExtResource("10_baxkn")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDockingStation"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LabelTitle" type="Label" parent="PopupDockingStation/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 30
text = "Docking Station"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PopupDockingStation/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eb6dy")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDockingStation/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LabelGoal" type="Label" parent="PopupDockingStation/VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Deposit 1000 Dust"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PopupDockingStation/VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_vertical = 4
show_percentage = false

[node name="LabelProgress" type="Label" parent="PopupDockingStation/VBoxContainer/PanelContainer/VBoxContainer/ProgressBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0 / 1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelInstructions" type="Label" parent="PopupDockingStation/VBoxContainer"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
text = "Finish the objective to purchase upgrades."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PopupDockingStation/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ButtonSleep" type="Button" parent="PopupDockingStation/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = " Purchase Upgrades "

[node name="ButtonHighlight" type="Panel" parent="PopupDockingStation/VBoxContainer/HBoxContainer/ButtonSleep"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_trceg")
script = ExtResource("11_20oq5")

[node name="ButtonClose" type="Button" parent="PopupDockingStation/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Close "

[node name="PopupShop" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jbj1t")
script = ExtResource("12_plh64")

[node name="MarginContainer" type="MarginContainer" parent="PopupShop"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="PopupWindow" type="PanelContainer" parent="PopupShop/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jkv2x")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupShop/MarginContainer/PopupWindow"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LabelTitle" type="Label" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 30
text = "Upgrades"
horizontal_alignment = 1

[node name="PanelContainerUpgrList" type="PanelContainer" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_muem4")

[node name="ScrollContainer" type="ScrollContainer" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/PanelContainerUpgrList"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/PanelContainerUpgrList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="UpgradeList" type="GridContainer" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/PanelContainerUpgrList/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 3

[node name="UpgradeUI" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/PanelContainerUpgrList/ScrollContainer/MarginContainer/UpgradeList" instance=ExtResource("13_t1jn2")]
layout_mode = 2

[node name="UpgradeUI2" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/PanelContainerUpgrList/ScrollContainer/MarginContainer/UpgradeList" instance=ExtResource("13_t1jn2")]
layout_mode = 2

[node name="UpgradeUI3" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/PanelContainerUpgrList/ScrollContainer/MarginContainer/UpgradeList" instance=ExtResource("13_t1jn2")]
layout_mode = 2

[node name="UpgradeUI4" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/PanelContainerUpgrList/ScrollContainer/MarginContainer/UpgradeList" instance=ExtResource("13_t1jn2")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LabelStoredDust" type="Label" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 20
text = "Stored Dust:  300"

[node name="HBoxContainer" type="HBoxContainer" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "   Start Next Day   "

[node name="Highlight" type="Panel" parent="PopupShop/MarginContainer/PopupWindow/VBoxContainer/HBoxContainer/Button"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_0ld40")

[connection signal="pressed" from="PopupRespawn/VBoxContainer/HBoxContainer/ButtonYes" to="PopupRespawn" method="_on_button_yes_pressed"]
[connection signal="pressed" from="PopupRespawn/VBoxContainer/HBoxContainer/ButtonNo" to="PopupRespawn" method="_on_button_no_pressed"]
[connection signal="pressed" from="PopupDockingStation/VBoxContainer/HBoxContainer/ButtonSleep" to="PopupDockingStation" method="_on_button_sleep_pressed"]
[connection signal="pressed" from="PopupDockingStation/VBoxContainer/HBoxContainer/ButtonClose" to="PopupDockingStation" method="_on_button_close_pressed"]
[connection signal="pressed" from="PopupShop/MarginContainer/PopupWindow/VBoxContainer/HBoxContainer/Button" to="PopupShop" method="_on_button_next_day_pressed"]
